layout issue on shitty iphones

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ a:hover {
 }
 
 @media (max-width: 680px) {      
-    h2{
+    h2 {
         font-size: 3rem;
     }
     #sideFlex {
@@ -96,6 +96,9 @@ a:hover {
     }
     body {
         background-image: url('background-phone.jpeg');
+    }
+    #verticalCenter {
+        height: inherit;
     }
 
 }
